--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask-Security==3.0.0
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
 greenlet==2.0.1
+gunicorn==20.1.0
 idna==3.4
 install==1.3.5
 itsdangerous==2.1.2
